--- a/client/UsersList.css
+++ b/client/UsersList.css
@@ -10,7 +10,9 @@
 .UsersOnline {
     padding: 20px;
     text-align: center;
-    background: #ccc;
+    color: #5d9cec;
+    font-family: 'Roboto', sans-serif;
+    font-weight:300;
 }
 
 .UsersList {
