--- a/client/UsersList.css
+++ b/client/UsersList.css
@@ -22,7 +22,8 @@
 
 .UserItem {
     list-style: none;
-    border-bottom: 1px solid #ccc;
-    padding: 20px;
-    margin: 0 0 0 20px;
+    padding: 20px 20px 20px 30px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    background-color: #fbfbfb;
 }
