--- a/client/App.css
+++ b/client/App.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  transition: all 300ms ease;
 }
 
 .App {
@@ -23,7 +24,6 @@ body {
   width: 25vw;
   justify-content: center;
   box-sizing: border-box;
-  font-family: "Robot", sans-serif;
   font-family: "Roboto", sans-serif;
   font-weight: 900;
 
