--- a/client/MessageList.css
+++ b/client/MessageList.css
@@ -1,8 +1,28 @@
 .MessageList {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 75vw;
-    padding: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 75vw;
+  padding: 20px;
+}
+
+.Message {
+  background-color: #333;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  padding: 5px;
+  color: #fff;
+  position:relative;
+}
+
+
+.From {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  margin-right:20px;
+}
+
+.MessageContainer {
+  padding: 10px;
 }
