--- a/client/MessageList.css
+++ b/client/MessageList.css
@@ -8,14 +8,15 @@
 }
 
 .Message {
-  background-color: #333;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   padding: 5px;
   color: #fff;
   border-radius:5px;
   position:relative;
+  border:1px solid #333;
   animation: message-anim 300ms;
+  color: #333;
 }
 
 
@@ -24,6 +25,9 @@
   font-weight: 400;
   margin-right:20px;
   animation: message-move 300ms;
+  padding:5px;
+  color: #fff;
+  border-radius:5px;
 }
 
 .MessageContainer {
